--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,6 +28,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kumuluz.ee.health</groupId>
+            <artifactId>kumuluzee-health</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kumuluz.ee.config</groupId>
+            <artifactId>kumuluzee-config-mp</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>rso.football</groupId>
             <artifactId>igrisca-services</artifactId>
         </dependency>
