--- a/k8s/igrisca-deployment.yaml
+++ b/k8s/igrisca-deployment.yaml
@@ -13,19 +13,15 @@ spec:
         app: igrisca
     spec:
       containers:
-        - image: ts4894/igrisca:2021-11-30-19-20-02
+        - image: ts4894/igrisca:2021-12-03-01-05-40
           name: igrisca
           # tu moraš dati pravo bazo (postres baza je se mi zdi; ne bo cez elephantSQL)
           env:
             - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
-              value: jdbc:postgresql://lallah.db.elephantsql.com:5432/kryfltbl
-            - name: KUMULUZEE_DATASOURCES0_USERNAME
-              value: kryfltbl
-            - name: KUMULUZEE_DATASOURCES0_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: pg-pass
-                  key: KUMULUZEE_DATASOURCES0_PASSWORD
+                  name: pg-pas-igrisca
+                  key: password
           ports:
             - containerPort: 8080
               name: server
