--- a/api/pom.xml
+++ b/api/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kumuluz.ee.cors</groupId>
+            <artifactId>kumuluzee-cors</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>rso.football</groupId>
             <artifactId>igrisca-services</artifactId>
         </dependency>
