--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -14,14 +14,18 @@ kumuluzee:
       port: 8080
   datasources:
     - jndi-name: jdbc/IgriscaMetadataDS
-      connection-url: jdbc:postgresql://localhost:5432/igrisca
-      username: postgres
-      password: postgres
+      connection-url: jdbc:postgresql://igrisca-db.postgres.database.azure.com:5432/postgres?user=postgresAdmin&password=IgriscaDBPass123&sslmode=require
+      username: postgresAdmin
   health:
     checks:
       data-source-health-check:
         type: liveness
         jndi-name: jdbc/IgriscaMetadataDS
+      disk-space-health-check:
+        threshold: 100000000
+      http-health-check:
+        - connection-url: https://github.com/RSO-football
+        - connection-url: http://52.151.211.52:8082/v1/rezervacije
     metrics:
       web-instrumentation:
         - name: igrisca-endpoint
