--- a/services/pom.xml
+++ b/services/pom.xml
@@ -48,6 +48,13 @@
             <artifactId>kumuluzee-metrics-core</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.kumuluz.ee.fault.tolerance</groupId>
+            <artifactId>kumuluzee-fault-tolerance-smallrye</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
